--- a/_posts/web-development/flask/2021-05-29-day-0.md
+++ b/_posts/web-development/flask/2021-05-29-day-0.md
@@ -5,3 +5,84 @@ permalink: /web/flask/day-zero
 ---
 
 ## Setting up of development environment.
+A simple setup to get started with development includes a machine with > 2 Gb of ram, browser, code editor with internet connectivity. I use raspberry-pi 4 as my development machine almost all the time. I have chromium installed on it for web browsing and vs-code editor for development. Also I have a decent internet connectivity of 50 Mbps.
+
+Ubuntu has a preinstalled version of python (python 3). In the due course, we would install other python modules which would help us to code faster and better. Before we get started with flask, ensure to have a virtual environment setup. It is a good practice since this keeps the core site-packages clean.
+
+##### Check the python installation by the following steps
+
+```bash
+ubuntu@ubuntu:~$ python -V
+Python 3.8.5
+ubuntu@ubuntu:~$ pip -V
+pip 20.0.2 from /usr/lib/python3/dist-packages/pip (python 3.8)
+```
+
+##### The next step is installing virtualenv. 
+
+```shell
+# The installation depends on the network speed, usually completed within 1-2 minutes.
+ubuntu@ubuntu:~$ pip install virtualenv
+
+# verify the installation using the below command.
+ubuntu@ubuntu:~$ virtualenv --version
+virtualenv 20.4.7 from /usr/local/lib/python3.8/dist-packages/virtualenv/__init__.py
+
+# create the virtual environment.
+ubuntu@ubuntu:~$ cd Programming/
+ubuntu@ubuntu:~/Programming$ virtualenv .virtual_env
+                    ....
+
+# Verify the virtual environment creation by
+ubuntu@ubuntu:~/Programming$ ls -l .virtual_env
+total 12
+drwxrwxr-x 2 ubuntu ubuntu 4096 May 29 21:31 bin
+drwxrwxr-x 3 ubuntu ubuntu 4096 May 29 21:31 lib
+-rw-rw-r-- 1 ubuntu ubuntu  201 May 29 21:31 pyvenv.cfg
+
+# Activate the virtual environment
+ubuntu@ubuntu:~/Programming$ source .virtual_env/bin/activate
+(.virtual_env) ubuntu@ubuntu:~/Programming$ 
+```
+
+The `(.virtual_env)` confirms all the programs from now on would refer to the python installation within the virtual env. This also confirms that only the python modules within the scope of this installation will be available for our programs.
+
+
+##### vscode configuration
+Download and install the latest stable version of vscode from the internet and configure it at your will. My favorites are material theme, python (from Microsoft), vscode-icons and prettier. I set my default python interpreter to in vscode to point to python installed in virtualenv.
+
+
+```json
+# settings.json
+{
+    "workbench.colorTheme": "Deepdark Material Theme | Full Black Version",
+    "workbench.iconTheme": "vscode-icons",
+    "workbench.editorAssociations": [
+        {
+            "viewType": "jupyter.notebook.ipynb",
+            "filenamePattern": "*.ipynb"
+        }
+    ],
+    "window.zoomLevel": 1,
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/__pycache__":true
+    },
+    "python.pythonPath": "/home/ubuntu/Programming/.venv/bin/python",
+    "python.autoComplete.extraPaths": [
+        "/home/ubuntu/Programming/flask-scaffold-project/Flask101/app"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/ubuntu/Programming/flask-scaffold-project/Flask101/app"
+    ],
+    "workbench.editor.untitled.hint": "hidden",
+    "workbench.startupEditor": "none",
+    "vsicons.dontShowNewVersionMessage": true
+}
+```
+
+That's all for day zero. Happy coding.
