Updated the day 1 and refactored content using hemmingway

--- a/_posts/web-development/flask/2021-05-29-day-0.md
+++ b/_posts/web-development/flask/2021-05-29-day-0.md
@@ -5,9 +5,17 @@ permalink: /web/flask/day-zero
 ---
 
 ## Setting up of development environment.
-A simple setup to get started with development includes a machine with > 2 Gb of ram, browser, code editor with internet connectivity. I use raspberry-pi 4 as my development machine almost all the time. I have chromium installed on it for web browsing and vs-code editor for development. Also I have a decent internet connectivity of 50 Mbps.
+An ideal setup to get started with development includes a machine with 
+1. 2 GB of ram or more 
+1. browser, 
+1. code editor 
+1. Internet connection. 
 
-Ubuntu has a preinstalled version of python (python 3). In the due course, we would install other python modules which would help us to code faster and better. Before we get started with flask, ensure to have a virtual environment setup. It is a good practice since this keeps the core site-packages clean.
+I use raspberry-pi 4 as my development machine. I have google chrome (web browser) and vs-code (code editor) for development. 
+
+Ubuntu(20.04) has a preinstalled version of python (python 3). As a best practice setup virtual environment for development. Install python packages within the virtual environment. 
+
+This help in keeping the core site-packages clean. Hence it is very important to use virtual environment for development.
 
 ##### Check the python installation by the following steps
 
@@ -45,11 +53,19 @@ ubuntu@ubuntu:~/Programming$ source .virtual_env/bin/activate
 (.virtual_env) ubuntu@ubuntu:~/Programming$ 
 ```
 
-The `(.virtual_env)` confirms all the programs from now on would refer to the python installation within the virtual env. This also confirms that only the python modules within the scope of this installation will be available for our programs.
+Usage of  `(.virtual_env)` confirms that virtual environment is active.
+Python programs will use the python installation within the environment. Only those python packages installed within virtual environment is available for the programs.
 
 
 ##### vscode configuration
-Download and install the latest stable version of vscode from the internet and configure it at your will. My favorites are material theme, python (from Microsoft), vscode-icons and prettier. I set my default python interpreter to in vscode to point to python installed in virtualenv.
+Download and install visual studio code from the internet. Install your visual studio plugins, my favorites are
+
+1. material theme
+1. python (from Microsoft)
+1. vscode-icons
+1. prettier. 
+
+Set python interpreter to point to virtual environment in visual studio code. Add `pythonPath` in settings.json
 
 
 ```json
@@ -86,3 +102,5 @@ Download and install the latest stable version of vscode from the internet and c
 ```
 
 That's all for day zero. Happy coding.
+
+[Next: Day - 1](./day-one)
