Fixed the routes in main page

--- a/_posts/web-development/flask/2021-05-29-flask.md
+++ b/_posts/web-development/flask/2021-05-29-flask.md
@@ -7,5 +7,5 @@ permalink: /web/flask
 
 Flask Web Development
 
-0. [Setting up of environment.](./day-zero)
-1. [My First Flask App](./day-one)
+0. [Setting up of environment.](./flask/day-zero)
+1. [My First Flask App](./flask/day-one)
