Updated the day 2

--- a/_posts/web-development/flask/2021-05-29-flask.md
+++ b/_posts/web-development/flask/2021-05-29-flask.md
@@ -9,3 +9,4 @@ Flask Web Development
 
 0. [Setting up of environment.](./flask/day-zero)
 1. [My First Flask App](./flask/day-one)
+1. [Introduction to www and http verbs.](./flask/day-two)
