--- a/_posts/web-development/flask/2021-05-30-day-1.md
+++ b/_posts/web-development/flask/2021-05-30-day-1.md
@@ -81,3 +81,5 @@ if __name__ == "__main__":
 Please refer github for the [code](https://github.com/pyVarad/flask-blog/tree/main/Day-1) details discussed for the day. 
 
 That's all for today. Happy coding.
+
+[Next: Day - 2](./day-two)
